配置文件修改

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,13 @@
 [GateServer]
 port = 8080
 [VarifyServer]
+host = 127.0.0.1
 port = 50051
+[Mysql]
+host = 127.0.0.1
+port = 3008
+passwd = 123456
+[Redis]
+host = 127.0.0.1
+port = 6380
+Passwd = 123456
