--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [GateServer]
 port = 8080
+host = 127.0.0.1
 [VarifyServer]
 host = 127.0.0.1
 port = 50051
@@ -10,4 +11,4 @@ passwd = 123456
 [Redis]
 host = 127.0.0.1
 port = 6380
-Passwd = 123456
+passwd = 123456
