--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,11 @@ host = 127.0.0.1
 host = 127.0.0.1
 port = 50051
 [Mysql]
-host = 127.0.0.1
-port = 3008
-passwd = 123456
+host=127.0.0.1
+port=33060
+passwd=123456
+user=root
+Schema=xchatdb
 [Redis]
 host = 127.0.0.1
 port = 6380
